Enhance SecurityConfig and WebConfig for improved CORS handling and security headers. Update ProfessionalController to validate registration and update requests. Refine ProfessionalRegistrationRequest to enforce email validation.